# tb4_ws

./: .gitignore  frames_2026-02-10_18.53.55.gv  frames_2026-02-14_13.49.13.gv  frames_2026-02-14_18.55.07.gv  frames_2026-02-14_18.57.47.gv  frames_2026-02-14_18.59.58.gv  frames_2026-02-14_19.10.04.gv
monitoring/: .env  docker-compose.yml
monitoring/monitor/: basin_debug_monitor.py  basin_monitor.py  monitor.py  moon_debug_monitor.py  moon_monitor.py  requirements.txt  robot_monitor.py
monitoring/scripts/: start_basin.sh  start_basin_debug.sh  start_monitoring.sh  start_moon.sh  start_moon_debug.sh  stop_monitoring.sh
src/exhibition_interfaces/: CMakeLists.txt  package.xml
src/exhibition_interfaces/srv/: EmergencyStop.srv  GetStatus.srv  TestSpin.srv
src/robots/: .gitignore  package.xml  setup.py
src/robots/config/: basin_localization.yaml  basin_navigation.yaml  basin_slam.yaml  clock_swing.yaml  exhibition.yaml  fastrtps_unicast.xml  fastrtps_wifi_only.xml  moon_clock_swing.yaml  moon_localization.yaml  moon_navigation.yaml  moon_slam.yaml  phase2_circle.yaml  robot-web-control.service
src/robots/launch/: basin_bringup.launch.py  basin_localization.launch.py  basin_navigation.launch.py  basin_relay.launch.py  basin_scan.launch.py  basin_slam.launch.py  clock_swing.launch.py  exhibition.launch.py  moon_bringup.launch.py  moon_clock_swing.launch.py  moon_dual_clock_swing.launch.py  moon_dual_clock_swing_exhibit.launch.py  moon_localization.launch.py  moon_navigation.launch.py  moon_relay.launch.py  moon_scan.launch.py  moon_slam.launch.py  phase1.launch.py  (+4 more)
(+42 files in other folders)
